--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,6 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#^2.3.1",
-    "vaadin": "^10.0.0-alpha9"
+    "vaadin": "^10.0.0-beta1"
   }
 }
