--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.0"
+    "react-scripts": "1.1.0",
+    "@polymer/polymer": "^3.0.0-pre.12",
+    "@vaadin/vaadin-button": "2.0.0-pre.1",
+    "@vaadin/vaadin-text-field": "2.0.0-pre.1"
   },
   "scripts": {
     "start": "react-scripts start",
