Use yarn instead of npm and fix wcjs path (#10)
* Use yarn instead of npm and fix wcjs path

* Fix path

* Add wcjs as dependency

* Fix updated yarn args

* Update yarn lock

* Upgrade packages

* Fix yarn syntax for global

* Pick polymer 3.0 stable

* Remove lang from yarn install link

* Fix polymer version to stable

--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "skeleton-starter-react",
+  "name": "hello-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
     "react-scripts": "^1.1.4",
-    "@polymer/polymer": "^3.0.0-pre.12",
-    "@vaadin/vaadin-button": "^2.0.0-pre.2",
-    "@vaadin/vaadin-text-field": "^2.0.1-pre.1"
+    "@polymer/polymer": "^3.0.0",
+    "@vaadin/vaadin-button": "^2.0.0-pre.4",
+    "@vaadin/vaadin-text-field": "^2.0.1-pre.2",
+    "@webcomponents/webcomponentsjs": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
