--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,8 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#^2.3.1",
-    "vaadin-core": "^10.0.0-beta9"
+    "vaadin-button": "vaadin/vaadin-button#^2.1.0-alpha2",
+    "vaadin-text-field": "vaadin/vaadin-text-field#^2.1.0-alpha2",
+    "vaadin-dialog": "vaadin/vaadin-dialog#renderer"
   }
 }
