--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "react-dom": "^16.4.0",
     "react-scripts": "^1.1.4",
     "@polymer/polymer": "^3.0.0",
-    "@vaadin/vaadin-button": "^2.0.0-pre.4",
-    "@vaadin/vaadin-text-field": "^2.0.1-pre.2",
-    "@webcomponents/webcomponentsjs": "^2.0.0"
+    "@vaadin/vaadin-button": "^2.1.0",
+    "@vaadin/vaadin-text-field": "^2.1.1",
+    "@webcomponents/webcomponentsjs": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
