--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@vaadin/vaadin-button": "^2.1.0",
-    "@vaadin/vaadin-text-field": "^2.1.2",
+    "@vaadin/vaadin-core": "^12.0.0-alpha4",
     "@webcomponents/webcomponentsjs": "^2.1.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
