--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@vaadin/vaadin-core": "^14.0.0-beta3",
+    "@vaadin/vaadin-core": "^14.0.0-rc1",
     "@webcomponents/webcomponentsjs": "^2.1.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
